--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,14 +3,22 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/board
+    url: jdbc:log4jdbc:mysql://localhost:3306/board
+    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
     username: root
     password: root
-
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.example.board_was.model
 
-logging.level:
-  org.hibernate.SQL: debug  # logger를 통해 하이버네이트 실행 SQL
+logging:
+  config: classpath:logback-spring.xml
+  level:
+    root: INFO
+    jdbc.sqlonly: INFO
+    jdbc.sqltiming: OFF
+    jdbc.resultset: OFF
+    jdbc.resultsettable: OFF
+    jdbc.audit: OFF
+    jdbc.connection: OFF
